<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VPN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gmail_username">Gmail账户</string>
    <string name="gmail_password">密码</string>
    <string name="save_password">保存密码</string>
    <string name="confirm">确认</string>
    <string name="tencent_username">qq帐号</string>
    <string name="tencent_password">qq密码</string>
    <string name="welcomeword">欢迎使用XXXX</string>
    <string name="useqq">使用qq号登陆</string>
    <string name="usegmail">使用gmail账户登陆</string>
    <string name="detail">关于</string>
    <string name="quit">退出</string>
    <string name="attention" translatable="false">注意事项</string>
	<string name="android_version" translatable="false">1.本软件仅支持安卓4.0以上设备</string>
	<string name="v6" translatable="false">2.在启动软件前必须先接入ipv6网络环境</string>
    <string name="back">返回主页</string>
</resources>
