<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
    <TextView
         android:id="@+id/void2"
         android:layout_width="fill_parent"
         android:layout_height="50dp" />
     
     <EditText
        android:id="@+id/T_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/void2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/tencent_username"
        android:inputType="number"
         />
     
     <EditText
            android:id="@+id/T_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/tencent_password"
            android:layout_below="@id/T_username"
            />
     
     <CheckBox
            android:id="@+id/save_tencentpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:text="@string/save_password"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/T_password"/>
      
     <Button
         android:id="@+id/confirm_t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/save_tencentpassword"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:text="@string/confirm" />

     <Button
         android:id="@+id/back3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="100dp"
         android:layout_marginLeft="100dp"
         android:layout_below="@id/confirm_t"
         android:text="@string/back" />
</RelativeLayout>
