<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
     <TextView
         android:id="@+id/void1"
         android:layout_width="fill_parent"
         android:layout_height="50dp" />
     
     <EditText
        android:id="@+id/G_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/void1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/gmail_username"
        android:inputType="textEmailAddress"
         />
     
     <EditText
            android:id="@+id/G_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/gmail_password"
            android:layout_below="@id/G_username"
            />
     
     <CheckBox
            android:id="@+id/save_gmailpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:text="@string/save_password"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/G_password"/>
      
     <Button
         android:id="@+id/confirm_g"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/save_gmailpassword"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
         android:text="@string/confirm" />
     
     <Button
         android:id="@+id/back2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:layout_marginRight="100dp"
         android:layout_marginLeft="100dp"
         android:layout_below="@id/confirm_g"
         android:text="@string/back" />
     
</RelativeLayout>
